--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -11,6 +11,7 @@
         font-optical-sizing: auto;
         font-weight: 400;
         font-style: normal;
+        font-size: x-large;
       }
     </style>
   </head>
