--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
         font-weight: 400;
         font-style: normal;
         font-size: x-large;
+
+        background-color: crimson;
+        color: aliceblue;
       }
     </style>
   </head>
   <body>
+    <h1>Lemorn</h1>
     <ul>
       <!-- ITEMS HERE -->
       <li>my name is Lemorn Hiers</li>
